⬆️ chore(build.gradle.kts): bump Stardog version to 8.1.3 and add JVM --add-opens args for better compatibility